# LogikSimulator

./: .gitignore  CMakeLists.txt  FSM.csv  README.md
include/: ANDFunc.h  CLKFunc.h  CLKNode.h  NANDFunc.h  NotFunc.h  ORFunc.h  RingBuffer.h  XORFunc.h  node.h  state.h  tFunc.h
src/: ANDFunc.cpp  CLKFunc.cpp  NANDFunc.cpp  NotFunc.cpp  ORFunc.cpp  XORFunc.cpp  main.cpp
